# HakkaDemo

./: settings.gradle.kts
app/: build.gradle.kts
app/server/: build.gradle.kts
app/server/src/androidTest/java/fan/akua/hakka/server/: ExampleInstrumentedTest.java
app/server/src/main/: AndroidManifest.xml
app/server/src/main/aidl/fan/akua/hakka/: PlayerEntry.aidl
app/server/src/main/aidl/fan/akua/hakka/demo/: IClient.aidl
app/server/src/main/assets/arm64-v8a/: starter
app/server/src/main/assets/armeabi-v7a/: starter
app/server/src/main/assets/x86/: starter
app/server/src/main/assets/x86_64/: starter
app/server/src/main/cpp/: CMakeLists.txt  selinux.cc  selinux.h  starter.cc
app/server/src/main/java/fan/akua/hakka/: Hakka.java  PlayerEntry.java
app/server/src/main/java/fan/akua/hakka/server/: ApkChangedObservers.java  HakkaServer.java  (+4 more)
app/server/src/main/res/raw/: start.sh
app/src/androidTest/java/fan/akua/hakka/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hakka-lib.cpp  native-lib.cpp  test_search.cc
app/src/main/cpp/core/: CMakeLists.txt
app/src/main/cpp/core/include/: exception.h  hakka.h  hakkaHelper.h  types.h
app/src/main/cpp/core/src/: memoryHelper.cc  pagemapEntry.cc  procHelper.cc  procMaps.cc  target.cc  target_memory.cc
app/src/main/java/fan/akua/hakka/demo/: App.kt  ControlService.kt  FloatWindow.java  MainActivity.java  NotificationDistribute.kt  PlayerHead.java  Test.java
app/src/main/res/layout/: activity_main.xml  float_anim.xml  float_player.xml  float_view.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/fan/akua/hakka/demo/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+10 files in other folders)
